name:                   arbor-bloodhound-extras
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/arbor-bloodhound-extras#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Arbor.Bloodhound.V5
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , bloodhound
                      , exceptions
                      , lens
                      , lens-aeson
  default-language:     Haskell2010

test-suite arbor-bloodhound-extras-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Arbor.Bloodhound.V5Spec
  build-depends:        base
                      , aeson
                      , arbor-bloodhound-extras
                      , bloodhound
                      , hspec
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/arbor-bloodhound-extras
